@@ -378,7 +378,10 @@ check_auto_buildable, configure, build, test, install, clean. See the comments
 inside Debian::Debhelper::Buildsystem for details. Note that this interface
 is still subject to change.
 
-Note that third-party buildsystems will not automatically be used by default,
-but can be forced to be used via the --buildsystem parameter.
+Note that third-party buildsystems will not automatically be used by
+default.  The package maintainer will either have to explicitly enable
+it via the --buildsystem parameter OR the build system should be
+registered in debhelper.  The latter is currently needed to ensure a
+stable and well-defined ordering of the build systems.
 
 -- Joey Hess <joeyh@debian.org>
