@@ -20,6 +20,10 @@ debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
     PERL_USE_UNSAFE_INC to fix a further set of packages
     which fail to build with . removed from @INC.
     (Closes: #832436)
+  * Dh_Buildsystems.pm: Enable auto-detection of the maven
+    and gradle buildsystems (provided they are installed).
+    Thanks to Emmanuel Bourg for the suggestion.
+    (Closes: #801732)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000
 
